force-app/main/default/objects/Servicing_Dashboard_Configuration__mdt/Servicing_Dashboard_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Servicing Dashboard Configuration</label>
    <pluralLabel>Servicing Dashboard Configurations</pluralLabel>
</CustomObject>