force-app/main/default/objects/Servicing_Dashboard_Configuration__mdt/fields/Button_Border_Color_Hex__c.field-meta.xml
<CustomField>
    <fullName>Button_Border_Color_Hex__c</fullName>
    <description>Enter the Hex Code #RRGGBB format color including the pound sign. (e.g. &quot;#000000&quot; for black)</description>
    <inlineHelpText>Enter the Hex Code #RRGGBB format color including the pound sign. (e.g. &quot;#000000&quot; for black)</inlineHelpText>
    <label>Button Border Color Hex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>