force-app/main/default/objects/Servicing_Dashboard_Configuration__mdt/fields/Number_of_Columns__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Columns__c</fullName>
    <description>Options will appear in the number of columns specified with wrapped text if the label exceeds the column width.</description>
    <inlineHelpText>Options will appear in the number of columns specified with wrapped text if the label exceeds the column width.</inlineHelpText>
    <label>Number of Columns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>